solve menu preview flickering

--- a/src/components/MenuDetailsPage/MenuDetails.module.scss
+++ b/src/components/MenuDetailsPage/MenuDetails.module.scss
@@ -49,6 +49,7 @@
 }
 
 .info-container > img {
+    display: block;
     width: 200px;
     height: 200px;
     border: 1px solid #d9d9d9;
